--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bingo_application">
+    package="com.ming.mingo">
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
